[package]
name = "stk500"
version = "0.1.3"
authors = ["David Ko <david@barobo.com>"]

[dependencies]
bytes = "*"
futures = "0.1.21"
futures-timer = "*"
log = "*"
tokio-core = "*"
tokio-io = "0.1.6"
tokio-proto = "0.1.1"
tokio-service = "*"

[dev-dependencies]
tokio-serial = "*"
simple_logger = "*"
